--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 
 	// Spring security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'  // OAuth2 클라이언트 관련 의존성
-	implementation 'org.springframework.security:spring-security-oauth2-jose'  // JWT 처리 관련 의존성 (OAuth2 로그인 시)
-
-	//JWT
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	testImplementation 'org.springframework.security:spring-security-test'
+//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'  // OAuth2 클라이언트 관련 의존성
+//	implementation 'org.springframework.security:spring-security-oauth2-jose'  // JWT 처리 관련 의존성 (OAuth2 로그인 시)
+//
+//	//JWT
+//	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 }
