--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 
 	// Spring security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 //	testImplementation 'org.springframework.security:spring-security-test'
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'  // OAuth2 클라이언트 관련 의존성
 //	implementation 'org.springframework.security:spring-security-oauth2-jose'  // JWT 처리 관련 의존성 (OAuth2 로그인 시)
