--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-
 	// Spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'  // OAuth2 클라이언트 관련 의존성
+	implementation 'org.springframework.security:spring-security-oauth2-jose'  // JWT 처리 관련 의존성 (OAuth2 로그인 시)
+
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
