--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,10 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리용
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // redis
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.data:spring-data-redis'
+
 
 
 
